--- a/package.json
+++ b/package.json
@@ -6,23 +6,21 @@
 	"type": "module",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "nodemon"
+		"dev": "nodemon -x tsx src/bot.ts"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"chalk": "^5.3.0",
-		"concurrently": "^8.2.2",
 		"discord.js": "^14.15.2",
 		"dotenv": "^16.4.5",
-		"mysql2": "^3.9.7",
 		"nodemon": "^3.1.0"
 	},
 	"devDependencies": {
 		"@types/node": "^20.12.11",
 		"prisma": "^5.13.0",
-		"ts-node": "^10.9.2",
+		"tsx": "^4.9.4",
 		"typescript": "^5.4.5"
 	}
 }
