--- a/package.json
+++ b/package.json
@@ -6,12 +6,20 @@
 	"type": "module",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "nodemon -x tsx src/bot.ts"
+		"dev": "nodemon -x tsx src/bot.ts --pretty",
+		"build": "npx tsc ",
+		"prisma:generate": "prisma generate ",
+		"prisma:migrate": "prisma migrate dev ",
+		"prisma:push": "prisma db push",
+		"prisma:studio": "prisma studio",
+		"register-commands": "tsx src/commands/deploy-commands.ts"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@prisma/client": "^5.13.0",
+		"axios": "^1.6.8",
 		"chalk": "^5.3.0",
 		"discord.js": "^14.15.2",
 		"dotenv": "^16.4.5",
@@ -19,6 +27,7 @@
 	},
 	"devDependencies": {
 		"@types/node": "^20.12.11",
+		"pkgroll": "^2.0.2",
 		"prisma": "^5.13.0",
 		"tsx": "^4.9.4",
 		"typescript": "^5.4.5"
